<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayoutID"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:background="@drawable/input_fields_frame_grey"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/userProfilePicAndNameID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userProfilePicID"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/input_fields_frame_orange"
            android:src="@drawable/my_avatar" />

        <TextView

            android:id="@+id/userNameID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/input_fields_frame_orange"
            android:padding="5dp"
            android:text="Here is the user name"
            android:textColor="@color/darkOrange"
            android:textSize="15sp"
            android:textStyle="italic|bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userProfilePicAndNameID"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".85">

            <TextView
                android:id="@+id/postDescriptionID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_fields_frame_grey"
                android:padding="5dp"
                android:text="Description..."
                android:textColor="@color/black"
                android:textStyle="bold|italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15">

            <ImageButton
                android:id="@+id/personal_post_options_menu"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/orange_settings" />
        </RelativeLayout>

    </LinearLayout>


    <com.example.myapplication.utility_classes.SquareImageView
        android:id="@+id/foodImgID"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@+id/layout_description"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/input_fields_frame_grey"
        android:src="@drawable/bridge" />

    <LinearLayout
        android:id="@+id/food_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foodImgID"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_fields_frame_grey"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/like_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/input_fields_frame_grey">

            <ImageButton
                android:id="@+id/likesBtnID"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/post_like_not_pressed"
                android:textColor="@color/colorAccentOnSignOut" />

            <TextView
                android:id="@+id/likes_not_pressed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/likesBtnID"
                android:layout_centerInParent="true"
                android:text="Like"
                android:textColor="@color/orange"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/comment_relative"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/input_fields_frame_grey">

            <ImageButton
                android:id="@+id/commentsBtnID"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/post_comments"
                android:textColor="@color/colorAccentOnSignOut" />

            <TextView
                android:id="@+id/comments_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/commentsBtnID"
                android:layout_centerInParent="true"
                android:text="Comment"
                android:textColor="@color/orange"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/recipe_relative"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/input_fields_frame_grey">

            <ImageButton
                android:id="@+id/recipeBtnID"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/post_recipe"
                android:textColor="@color/colorAccentOnSignOut" />

            <TextView
                android:id="@+id/recipe_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/recipeBtnID"
                android:layout_centerInParent="true"
                android:text="Recipe"

                android:textColor="@color/orange"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ingredients_relative"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/input_fields_frame_grey">

            <ImageButton
                android:id="@+id/ingredientsBtnID"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/post_ingredients"
                android:textColor="@color/colorAccentOnSignOut" />

            <TextView
                android:id="@+id/ingredients_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ingredientsBtnID"
                android:layout_centerInParent="true"
                android:text="Ingredients"

                android:textColor="@color/orange"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <!--<RelativeLayout-->
    <!--android:id="@+id/overviewLayoutID"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/toolbarExpansionContainerID">-->

    <!--<TextView-->
    <!--android:id="@+id/likesOverview"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="32dp"-->
    <!--android:layout_marginEnd="32dp"-->
    <!--android:text="Liked by whoever, eve, and 30 others"-->
    <!--android:textColor="@color/black"-->
    <!--android:textSize="18sp" />-->

    <!--</RelativeLayout>-->

    <RelativeLayout
        android:id="@+id/toolbarExpansionContainerID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_linear">

        <TextView
            android:id="@+id/expansionTextID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_fields_frame_grey"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

    </RelativeLayout>


    <TextView
        android:id="@+id/post_TimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarExpansionContainerID"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:text="3 days ago"
        android:textColor="@color/grey_500"

        android:textSize="18sp"
        android:textStyle="bold|italic" />
</RelativeLayout>
