...
            android:drawablePadding="20dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="#F79862" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/orView"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
...
