<resources>
    <string name="app_name">ChefooD</string>

    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="photo">Photo</string>


    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
...
